--- a/Site/GymLife.html
+++ b/Site/GymLife.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GYM LIFE</title>
-    <link rel="website icon"  type="png" href="imagens/logoSimbolo.png">
+    <link rel="website icon" type="png" href="imagens/logoSimbolo.png">
     <link rel="stylesheet" href="GymLife.css">
 </head>
+
 <body>
 
     <!--HEADER-->
@@ -14,11 +16,26 @@
         <img src="imagens/logoSemfundo.png">
         <div class="container">
             <ul>
-                <li>Home</li>
-                <li>Bem-Estar</li>
-                <li>Curiosidades</li>
-                <li>Dicas</li>
-                <li>Desafios</li>
+                <a href="#home">
+                    <li>Home</li>
+                </a>
+
+                <a href="#bemEstar">
+                    <li>Bem-Estar</li>
+                </a>
+
+                <a href="#curiosidades">
+                    <li>Curiosidades</li>
+                </a>
+
+                <a href="#dicas">
+                    <li>Dicas</li>
+                </a>
+
+                <a href="#desafios">
+                    <li>Desafios</li>
+                </a>
+
                 <li>Login</li>
                 <li>|</li>
                 <li>Cadastre-se</li>
@@ -28,13 +45,15 @@
 
     <!-- BANNER -->
     <div class="banner">
-        <img src="imagens/iamgem4.jpg" >
+        <img src="imagens/imagem4.jpg">
         <div class="text">
-                <h1>SUPERE A SI MESMO A CADA REPETIÇÃO!</h1>
+            <h1>SUPERE A SI MESMO A CADA REPETIÇÃO!</h1>
         </div>
     </div>
 
-    
-     
+  
+
+
 </body>
+
 </html>
