tela de cadastro, ajustes css

--- a/Site/GymLife.html
+++ b/Site/GymLife.html
@@ -39,7 +39,9 @@
                 <li>Login</li>
                 
                 <li>|</li>
+                <a href="cadastro.html"> 
                 <li>Cadastre-se</li>
+                </a>
             </ul>
         </div>
     </div>
