tela de login, alteração de imagens, css

--- a/Site/GymLife.html
+++ b/Site/GymLife.html
@@ -36,8 +36,10 @@
                     <li>Desafios</li>
                 </a>
                 
-                <li>Login</li>
-                
+                <a href="login.html">
+                    <li>Login</li>
+                </a>
+
                 <li>|</li>
                 <a href="cadastro.html"> 
                 <li>Cadastre-se</li>
