--- a/Site/cadastro.html
+++ b/Site/cadastro.html
@@ -19,26 +19,26 @@
 
     <!-- CADASTRO -->
     <div class="cadastro">
-        <img src="imagens/bannerTelaCadastro8.jpg" alt="foto de fundo tela de cadastro">
+        <img src="imagens/bannerTelaFundoCadastro9.jpg" alt="foto de fundo tela de cadastro">
         <div class="container">
             <div class="campos">
                 <h2>CADASTRE-SE</h2>
-                <span>Nome</span><br>
+                <span>NOME</span><br>
                 <input id="nome_input" placeholder="seu nome">
                 <div class="campos">
-                    <span>Email</span><br>
+                    <span>EMAIL</span><br>
                     <input id="email_input" placeholder="exemplo@exemplo.com">
                 </div>
                 <div class="campos">
-                    <span>User</span><br>
+                    <span>USER</span><br>
                     <input id="user_input" placeholder="@usuario">
                 </div>
                 <div class="campos">
-                    <span>Senha</span><br>
+                    <span>SENHA</span><br>
                     <input id="senha_input" placeholder="******" type="password">
                 </div>
                 <div class="campos">
-                    <span>Confirmação de Senha</span><br>
+                    <span>CONFIRMAÇÃO DE SENHA</span><br>
                     <input id="confirmacao_senha_input" placeholder=****** type="password">
                 </div>
                 <br>
