modificações tela home

--- a/Site/GymLife.html
+++ b/Site/GymLife.html
@@ -55,8 +55,29 @@
             <h1>SUPERE A SI MESMO A CADA REPETIÇÃO!</h1>
         </div>
     </div>
-
-  
+    <div>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae ducimus ab autem officia laborum minima reprehenderit cumque vel quibusdam sequi obcaecati iure amet ullam voluptas perferendis, harum dolore, quae eius.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae ducimus ab autem officia laborum minima reprehenderit cumque vel quibusdam sequi obcaecati iure amet ullam voluptas perferendis, harum dolore, quae eius.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae ducimus ab autem officia laborum minima reprehenderit cumque vel quibusdam sequi obcaecati iure amet ullam voluptas perferendis, harum dolore, quae eius.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae ducimus ab autem officia laborum minima reprehenderit cumque vel quibusdam sequi obcaecati iure amet ullam voluptas perferendis, harum dolore, quae eius.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae ducimus ab autem officia laborum minima reprehenderit cumque vel quibusdam sequi obcaecati iure amet ullam voluptas perferendis, harum dolore, quae eius.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae ducimus ab autem officia laborum minima reprehenderit cumque vel quibusdam sequi obcaecati iure amet ullam voluptas perferendis, harum dolore, quae eius.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae ducimus ab autem officia laborum minima reprehenderit cumque vel quibusdam sequi obcaecati iure amet ullam voluptas perferendis, harum dolore, quae eius.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae ducimus ab autem officia laborum minima reprehenderit cumque vel quibusdam sequi obcaecati iure amet ullam voluptas perferendis, harum dolore, quae eius.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae ducimus ab autem officia laborum minima reprehenderit cumque vel quibusdam sequi obcaecati iure amet ullam voluptas perferendis, harum dolore, quae eius.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae ducimus ab autem officia laborum minima reprehenderit cumque vel quibusdam sequi obcaecati iure amet ullam voluptas perferendis, harum dolore, quae eius.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae ducimus ab autem officia laborum minima reprehenderit cumque vel quibusdam sequi obcaecati iure amet ullam voluptas perferendis, harum dolore, quae eius.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae ducimus ab autem officia laborum minima reprehenderit cumque vel quibusdam sequi obcaecati iure amet ullam voluptas perferendis, harum dolore, quae eius.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae ducimus ab autem officia laborum minima reprehenderit cumque vel quibusdam sequi obcaecati iure amet ullam voluptas perferendis, harum dolore, quae eius.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae ducimus ab autem officia laborum minima reprehenderit cumque vel quibusdam sequi obcaecati iure amet ullam voluptas perferendis, harum dolore, quae eius.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae ducimus ab autem officia laborum minima reprehenderit cumque vel quibusdam sequi obcaecati iure amet ullam voluptas perferendis, harum dolore, quae eius.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae ducimus ab autem officia laborum minima reprehenderit cumque vel quibusdam sequi obcaecati iure amet ullam voluptas perferendis, harum dolore, quae eius.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae ducimus ab autem officia laborum minima reprehenderit cumque vel quibusdam sequi obcaecati iure amet ullam voluptas perferendis, harum dolore, quae eius.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae ducimus ab autem officia laborum minima reprehenderit cumque vel quibusdam sequi obcaecati iure amet ullam voluptas perferendis, harum dolore, quae eius.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae ducimus ab autem officia laborum minima reprehenderit cumque vel quibusdam sequi obcaecati iure amet ullam voluptas perferendis, harum dolore, quae eius.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae ducimus ab autem officia laborum minima reprehenderit cumque vel quibusdam sequi obcaecati iure amet ullam voluptas perferendis, harum dolore, quae eius.</p>
+    </div>
+    
 
 
 </body>
