--- a/Site/GymLife.html
+++ b/Site/GymLife.html
@@ -40,7 +40,7 @@
                     <li>Login</li>
                 </a>
 
-                <li>|</li>
+                <span>|</span>
                 <a href="cadastro.html"> 
                 <li>Cadastre-se</li>
                 </a>
@@ -55,6 +55,7 @@
             <h1>SUPERE A SI MESMO A CADA REPETIÇÃO!</h1>
         </div>
     </div>
+    <!-- BEM ESTAR -->
     <div>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae ducimus ab autem officia laborum minima reprehenderit cumque vel quibusdam sequi obcaecati iure amet ullam voluptas perferendis, harum dolore, quae eius.</p>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae ducimus ab autem officia laborum minima reprehenderit cumque vel quibusdam sequi obcaecati iure amet ullam voluptas perferendis, harum dolore, quae eius.</p>
