modificações css e imagens

--- a/Site/GymLife.html
+++ b/Site/GymLife.html
@@ -35,14 +35,14 @@
                 <a href="#desafios">
                     <li>Desafios</li>
                 </a>
-                
+
                 <a href="login.html">
                     <li>Login</li>
                 </a>
 
                 <span>|</span>
-                <a href="cadastro.html"> 
-                <li>Cadastre-se</li>
+                <a href="cadastro.html">
+                    <li>Cadastre-se</li>
                 </a>
             </ul>
         </div>
@@ -56,29 +56,22 @@
         </div>
     </div>
     <!-- BEM ESTAR -->
-    <div>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae ducimus ab autem officia laborum minima reprehenderit cumque vel quibusdam sequi obcaecati iure amet ullam voluptas perferendis, harum dolore, quae eius.</p>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae ducimus ab autem officia laborum minima reprehenderit cumque vel quibusdam sequi obcaecati iure amet ullam voluptas perferendis, harum dolore, quae eius.</p>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae ducimus ab autem officia laborum minima reprehenderit cumque vel quibusdam sequi obcaecati iure amet ullam voluptas perferendis, harum dolore, quae eius.</p>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae ducimus ab autem officia laborum minima reprehenderit cumque vel quibusdam sequi obcaecati iure amet ullam voluptas perferendis, harum dolore, quae eius.</p>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae ducimus ab autem officia laborum minima reprehenderit cumque vel quibusdam sequi obcaecati iure amet ullam voluptas perferendis, harum dolore, quae eius.</p>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae ducimus ab autem officia laborum minima reprehenderit cumque vel quibusdam sequi obcaecati iure amet ullam voluptas perferendis, harum dolore, quae eius.</p>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae ducimus ab autem officia laborum minima reprehenderit cumque vel quibusdam sequi obcaecati iure amet ullam voluptas perferendis, harum dolore, quae eius.</p>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae ducimus ab autem officia laborum minima reprehenderit cumque vel quibusdam sequi obcaecati iure amet ullam voluptas perferendis, harum dolore, quae eius.</p>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae ducimus ab autem officia laborum minima reprehenderit cumque vel quibusdam sequi obcaecati iure amet ullam voluptas perferendis, harum dolore, quae eius.</p>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae ducimus ab autem officia laborum minima reprehenderit cumque vel quibusdam sequi obcaecati iure amet ullam voluptas perferendis, harum dolore, quae eius.</p>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae ducimus ab autem officia laborum minima reprehenderit cumque vel quibusdam sequi obcaecati iure amet ullam voluptas perferendis, harum dolore, quae eius.</p>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae ducimus ab autem officia laborum minima reprehenderit cumque vel quibusdam sequi obcaecati iure amet ullam voluptas perferendis, harum dolore, quae eius.</p>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae ducimus ab autem officia laborum minima reprehenderit cumque vel quibusdam sequi obcaecati iure amet ullam voluptas perferendis, harum dolore, quae eius.</p>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae ducimus ab autem officia laborum minima reprehenderit cumque vel quibusdam sequi obcaecati iure amet ullam voluptas perferendis, harum dolore, quae eius.</p>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae ducimus ab autem officia laborum minima reprehenderit cumque vel quibusdam sequi obcaecati iure amet ullam voluptas perferendis, harum dolore, quae eius.</p>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae ducimus ab autem officia laborum minima reprehenderit cumque vel quibusdam sequi obcaecati iure amet ullam voluptas perferendis, harum dolore, quae eius.</p>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae ducimus ab autem officia laborum minima reprehenderit cumque vel quibusdam sequi obcaecati iure amet ullam voluptas perferendis, harum dolore, quae eius.</p>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae ducimus ab autem officia laborum minima reprehenderit cumque vel quibusdam sequi obcaecati iure amet ullam voluptas perferendis, harum dolore, quae eius.</p>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae ducimus ab autem officia laborum minima reprehenderit cumque vel quibusdam sequi obcaecati iure amet ullam voluptas perferendis, harum dolore, quae eius.</p>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae ducimus ab autem officia laborum minima reprehenderit cumque vel quibusdam sequi obcaecati iure amet ullam voluptas perferendis, harum dolore, quae eius.</p>
+    <div class="bemEstar" id="bemEstar">
+        <p>BEM-ESTAR</p>
+        <div class="cards">
+            <p></p>
+        </div>
+        <div class="cards">
+            <p></p>
+        </div>
+        <div class="cards">
+            <p></p>
+        </div>
+        <div class="cards">
+            <p></p>
+        </div>
     </div>
-    
+
 
 
 </body>
