conteúdo da seção bem-estar, css, alterações das imagens

--- a/Site/GymLife.html
+++ b/Site/GymLife.html
@@ -48,31 +48,77 @@
         </div>
     </div>
 
-    <!-- BANNER -->
-    <div class="banner">
+    <!-- HOME BANNER -->
+    <div class="banner" id="home">
         <img src="imagens/imagem4.jpg">
         <div class="text">
             <h1>SUPERE A SI MESMO A CADA REPETIÇÃO!</h1>
         </div>
     </div>
+
     <!-- BEM ESTAR -->
     <div class="bemEstar" id="bemEstar">
         <p>BEM-ESTAR</p>
-        <div class="cards">
-            <p></p>
+        <p>BENEFÍCIOS DA ATIVIDADE FÍSICA!</p>
+
+        <div class="container">
+            <div class="cards">
+                <p>MELHORA O HUMOR</p>
+                <div class="conteudo">
+                    <p>
+                        Exercícios físicos liberam endorfina e serotonina, hormônios essenciais para a
+                        manutenção do bem-estar.
+                    </p>
+                </div>
+            </div>
+
+            <div class="cards">
+                <p>REDUZ O ESTRESSE</p>
+                <div class="conteudo">
+                    <p>
+                        O estresse é liberado durante a prática de exercícios. Muitas pessoas afirmam fazer academia justamente para se livrar do estresse acumulado ao longo do dia ou da semana corrida de trabalho.
+                    </p>
+                </div>
+            </div>
+
+            <div class="cards">
+                <p>MELHORA A CONCENTRAÇÃO</p>
+                <div class="conteudo">
+                    <p>
+                        Ao praticar atividade física, precisamos ter consciência corporal. Logo, estimulamos o cérebro a focar nos movimentos e na coordenação motora. Por sua vez, ganhamos mais foco e concentração. 
+                    </p>
+                </div>
+            </div>
         </div>
-        <div class="cards">
-            <p></p>
-        </div>
-        <div class="cards">
-            <p></p>
-        </div>
-        <div class="cards">
-            <p></p>
+        <div class="container">
+            <div class="cards">
+                <p>CONTROLA A ANSIEDADE</p>
+                <div class="conteudo">
+                    <p>
+                        Praticar atividades físicas melhora diversos aspectos de nossa saúde mental, ajuda a melhorar a qualidade do sono e, consequentemente, a reduzir a ansiedade.
+                    </p>
+                </div>
+            </div>
+
+            <div class="cards">
+                <p>PREVINE A DEPRESSÃO</p>
+                <div class="conteudo">
+                    <p>
+                        Além dos benefícios fisiológicos, a prática de atividade física acarreta benefícios psicológicos, tais como: melhor sensação de bem estar, assim como, redução da depressão.
+                    </p>
+                </div>
+            </div>
+
+            <div class="cards">
+                <p>FORTALECE A AUTOESTIMA</p>
+                <div class="conteudo">
+                    <p>
+                        Aumenta a confiança, melhorando a autoestima e combatendo a indisposição.
+                    </p>
+                </div>
+            </div>
         </div>
     </div>
-
-
 
 </body>
 
