dicas,css,imagens

--- a/GymLife.html
+++ b/GymLife.html
@@ -24,9 +24,9 @@
                     <li>Bem-Estar</li>
                 </a>
 
-                <a href="#curiosidades">
+                <!-- <a href="#curiosidades">
                     <li>Curiosidades</li>
-                </a>
+                </a> -->
 
                 <a href="#dicas">
                     <li>Dicas</li>
@@ -58,7 +58,7 @@
 
     <!-- BEM ESTAR -->
     <div class="bemEstar" id="bemEstar">
-        <p>BEM-ESTAR</p>
+        <h1>BEM-ESTAR</h1>
         <p>BENEFÍCIOS DA ATIVIDADE FÍSICA!</p>
 
         <div class="container">
@@ -121,6 +121,34 @@
     </div>
 
     <!-- DICAS -->
+    <div class="dicas" id="dicas">
+        <img src="imagens/bannerDicas.jpg">
+        <div class="text">
+            <h1>DICAS PARA INICIANTES NA ACADEMIA</h1>
+        </div>
+        <div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam harum cumque omnis porro, minus numquam facere illum fugiat soluta reiciendis tempore dolorum voluptatum iure at enim facilis quas! Cumque, dolore?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam harum cumque omnis porro, minus numquam facere illum fugiat soluta reiciendis tempore dolorum voluptatum iure at enim facilis quas! Cumque, dolore?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam harum cumque omnis porro, minus numquam facere illum fugiat soluta reiciendis tempore dolorum voluptatum iure at enim facilis quas! Cumque, dolore?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam harum cumque omnis porro, minus numquam facere illum fugiat soluta reiciendis tempore dolorum voluptatum iure at enim facilis quas! Cumque, dolore?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam harum cumque omnis porro, minus numquam facere illum fugiat soluta reiciendis tempore dolorum voluptatum iure at enim facilis quas! Cumque, dolore?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam harum cumque omnis porro, minus numquam facere illum fugiat soluta reiciendis tempore dolorum voluptatum iure at enim facilis quas! Cumque, dolore?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam harum cumque omnis porro, minus numquam facere illum fugiat soluta reiciendis tempore dolorum voluptatum iure at enim facilis quas! Cumque, dolore?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam harum cumque omnis porro, minus numquam facere illum fugiat soluta reiciendis tempore dolorum voluptatum iure at enim facilis quas! Cumque, dolore?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam harum cumque omnis porro, minus numquam facere illum fugiat soluta reiciendis tempore dolorum voluptatum iure at enim facilis quas! Cumque, dolore?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam harum cumque omnis porro, minus numquam facere illum fugiat soluta reiciendis tempore dolorum voluptatum iure at enim facilis quas! Cumque, dolore?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam harum cumque omnis porro, minus numquam facere illum fugiat soluta reiciendis tempore dolorum voluptatum iure at enim facilis quas! Cumque, dolore?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam harum cumque omnis porro, minus numquam facere illum fugiat soluta reiciendis tempore dolorum voluptatum iure at enim facilis quas! Cumque, dolore?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam harum cumque omnis porro, minus numquam facere illum fugiat soluta reiciendis tempore dolorum voluptatum iure at enim facilis quas! Cumque, dolore?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam harum cumque omnis porro, minus numquam facere illum fugiat soluta reiciendis tempore dolorum voluptatum iure at enim facilis quas! Cumque, dolore?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam harum cumque omnis porro, minus numquam facere illum fugiat soluta reiciendis tempore dolorum voluptatum iure at enim facilis quas! Cumque, dolore?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam harum cumque omnis porro, minus numquam facere illum fugiat soluta reiciendis tempore dolorum voluptatum iure at enim facilis quas! Cumque, dolore?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam harum cumque omnis porro, minus numquam facere illum fugiat soluta reiciendis tempore dolorum voluptatum iure at enim facilis quas! Cumque, dolore?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam harum cumque omnis porro, minus numquam facere illum fugiat soluta reiciendis tempore dolorum voluptatum iure at enim facilis quas! Cumque, dolore?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam harum cumque omnis porro, minus numquam facere illum fugiat soluta reiciendis tempore dolorum voluptatum iure at enim facilis quas! Cumque, dolore?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam harum cumque omnis porro, minus numquam facere illum fugiat soluta reiciendis tempore dolorum voluptatum iure at enim facilis quas! Cumque, dolore?</p>
+        </div>
+    </div>
 
 </body>
 
