--- a/cadastro.html
+++ b/cadastro.html
@@ -46,7 +46,11 @@
                 <button onclick="cadastrar()">
                     CADASTRAR
                 </button>
-                
+                <div class="possuiLogin">
+                    <p>
+                        Já tem uma conta? <a href="login.html"> Faça login aqui</a>
+                    </p>
+                </div>
 
             </div>
         </div>
