--- a/login.html
+++ b/login.html
@@ -33,7 +33,11 @@
                 <button onclick="EntrarLogin()">
                     ENTRAR
                 </button>
-                
+                <div class="possuiConta">
+                    <p>
+                        Não tem uma conta?  <a href="cadastro.html">Cadastre-se</a>
+                    </p>
+                </div>
             </div>
         </div>
     </div>
