ajustes dicas, css

--- a/GymLife.html
+++ b/GymLife.html
@@ -65,28 +65,31 @@
             <div class="cards">
                 <p>MELHORA O HUMOR</p>
                 <div class="conteudo">
-                    <p>
+                    <span>
                         Exercícios físicos liberam endorfina e serotonina, hormônios essenciais para a
                         manutenção do bem-estar.
-                    </p>
+                    </span>
                 </div>
             </div>
 
             <div class="cards">
                 <p>REDUZ O ESTRESSE</p>
                 <div class="conteudo">
-                    <p>
-                        O estresse é liberado durante a prática de exercícios. Muitas pessoas afirmam fazer academia justamente para se livrar do estresse acumulado ao longo do dia ou da semana corrida de trabalho.
-                    </p>
+                    <span>
+                        O estresse é liberado durante a prática de exercícios. Muitas pessoas afirmam fazer academia
+                        justamente para se livrar do estresse acumulado ao longo do dia ou da semana corrida de
+                        trabalho.
+                    </span>
                 </div>
             </div>
 
             <div class="cards">
                 <p>MELHORA A CONCENTRAÇÃO</p>
                 <div class="conteudo">
-                    <p>
-                        Ao praticar atividade física, precisamos ter consciência corporal. Logo, estimulamos o cérebro a focar nos movimentos e na coordenação motora. Por sua vez, ganhamos mais foco e concentração. 
-                    </p>
+                    <span>
+                        Ao praticar atividade física, precisamos ter consciência corporal. Logo, estimulamos o cérebro a
+                        focar nos movimentos e na coordenação motora. Por sua vez, ganhamos mais foco e concentração.
+                    </span>
                 </div>
             </div>
         </div>
@@ -94,27 +97,29 @@
             <div class="cards">
                 <p>CONTROLA A ANSIEDADE</p>
                 <div class="conteudo">
-                    <p>
-                        Praticar atividades físicas melhora diversos aspectos de nossa saúde mental, ajuda a melhorar a qualidade do sono e, consequentemente, a reduzir a ansiedade.
-                    </p>
+                    <span>
+                        Praticar atividades físicas melhora diversos aspectos de nossa saúde mental, ajuda a melhorar a
+                        qualidade do sono e, consequentemente, a reduzir a ansiedade.
+                    </span>
                 </div>
             </div>
 
             <div class="cards">
                 <p>PREVINE A DEPRESSÃO</p>
                 <div class="conteudo">
-                    <p>
-                        Além dos benefícios fisiológicos, a prática de atividade física acarreta benefícios psicológicos, tais como: melhor sensação de bem estar, assim como, redução da depressão.
-                    </p>
+                    <span>
+                        Além dos benefícios fisiológicos, a prática de atividade física acarreta benefícios
+                        psicológicos, tais como: melhor sensação de bem estar, assim como, redução da depressão.
+                    </span>
                 </div>
             </div>
 
             <div class="cards">
                 <p>FORTALECE A AUTOESTIMA</p>
                 <div class="conteudo">
-                    <p>
+                    <span>
                         Aumenta a confiança, melhorando a autoestima e combatendo a indisposição.
-                    </p>
+                    </span>
                 </div>
             </div>
         </div>
@@ -123,30 +128,48 @@
     <!-- DICAS -->
     <div class="dicas" id="dicas">
         <img src="imagens/bannerDicas.jpg">
-        <div class="text">
+        <div class="title">
             <h1>DICAS PARA INICIANTES NA ACADEMIA</h1>
         </div>
-        <div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam harum cumque omnis porro, minus numquam facere illum fugiat soluta reiciendis tempore dolorum voluptatum iure at enim facilis quas! Cumque, dolore?</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam harum cumque omnis porro, minus numquam facere illum fugiat soluta reiciendis tempore dolorum voluptatum iure at enim facilis quas! Cumque, dolore?</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam harum cumque omnis porro, minus numquam facere illum fugiat soluta reiciendis tempore dolorum voluptatum iure at enim facilis quas! Cumque, dolore?</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam harum cumque omnis porro, minus numquam facere illum fugiat soluta reiciendis tempore dolorum voluptatum iure at enim facilis quas! Cumque, dolore?</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam harum cumque omnis porro, minus numquam facere illum fugiat soluta reiciendis tempore dolorum voluptatum iure at enim facilis quas! Cumque, dolore?</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam harum cumque omnis porro, minus numquam facere illum fugiat soluta reiciendis tempore dolorum voluptatum iure at enim facilis quas! Cumque, dolore?</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam harum cumque omnis porro, minus numquam facere illum fugiat soluta reiciendis tempore dolorum voluptatum iure at enim facilis quas! Cumque, dolore?</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam harum cumque omnis porro, minus numquam facere illum fugiat soluta reiciendis tempore dolorum voluptatum iure at enim facilis quas! Cumque, dolore?</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam harum cumque omnis porro, minus numquam facere illum fugiat soluta reiciendis tempore dolorum voluptatum iure at enim facilis quas! Cumque, dolore?</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam harum cumque omnis porro, minus numquam facere illum fugiat soluta reiciendis tempore dolorum voluptatum iure at enim facilis quas! Cumque, dolore?</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam harum cumque omnis porro, minus numquam facere illum fugiat soluta reiciendis tempore dolorum voluptatum iure at enim facilis quas! Cumque, dolore?</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam harum cumque omnis porro, minus numquam facere illum fugiat soluta reiciendis tempore dolorum voluptatum iure at enim facilis quas! Cumque, dolore?</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam harum cumque omnis porro, minus numquam facere illum fugiat soluta reiciendis tempore dolorum voluptatum iure at enim facilis quas! Cumque, dolore?</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam harum cumque omnis porro, minus numquam facere illum fugiat soluta reiciendis tempore dolorum voluptatum iure at enim facilis quas! Cumque, dolore?</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam harum cumque omnis porro, minus numquam facere illum fugiat soluta reiciendis tempore dolorum voluptatum iure at enim facilis quas! Cumque, dolore?</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam harum cumque omnis porro, minus numquam facere illum fugiat soluta reiciendis tempore dolorum voluptatum iure at enim facilis quas! Cumque, dolore?</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam harum cumque omnis porro, minus numquam facere illum fugiat soluta reiciendis tempore dolorum voluptatum iure at enim facilis quas! Cumque, dolore?</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam harum cumque omnis porro, minus numquam facere illum fugiat soluta reiciendis tempore dolorum voluptatum iure at enim facilis quas! Cumque, dolore?</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam harum cumque omnis porro, minus numquam facere illum fugiat soluta reiciendis tempore dolorum voluptatum iure at enim facilis quas! Cumque, dolore?</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam harum cumque omnis porro, minus numquam facere illum fugiat soluta reiciendis tempore dolorum voluptatum iure at enim facilis quas! Cumque, dolore?</p>
+        <div class="subTitulo">
+            
+            <p>
+                A academia para iniciantes pode parecer um tanto quanto assustadora.
+                Afinal, são diversos equipamentos, pessoas mais experientes e muita expectativa. 
+                Por isso, montamos um guia com as informações mais importantes para você ter os melhores resultados no
+                treino
+            </p>
+            <div class="topicos">
+                <h1>1 - Faça uma avaliação física</h1>
+                <span>Antes de mais nada, o primeiro passo é saber seu estado atual de saúde. Muitas academias oferecem
+                    avaliações físicas gratuitas para novos membros, que incluem medição de pressão arterial, índice de
+                    massa corporal (IMC), porcentagem de gordura corporal e teste de flexibilidade.
+                </span>
+
+                <h1>2 - Defina seus objetivos</h1>
+                <span>Para iniciar os treinos na academia, é importante ter metas específicas e realistas para seu
+                    programa de exercícios. Se seu objetivo é perder peso, por exemplo, você deve se concentrar em
+                    exercícios de cardio combinados com a musculação e, clro, uma alimentação saudável. Se você quer
+                    ganhar massa muscular, priorize mais os exercícios de força e se alimente, principalmente, de
+                    alimentos ricos em proteínas.</span>
+
+                <h1>3 - Comece devagar</h1>
+                <span>
+                    É importante começar com um programa de exercícios adequado para seu nível de condicionamento
+                    físico. Não tente levantar pesos muito pesados ou fazer exercícios de alta intensidade logo no
+                    início. Portanto, comece com exercícios leves e aumente a intensidade gradualmente.
+                </span>
+
+                <h1>4 - Respeite seus limites</h1>
+                <span>
+                    Lembre-se que, na academia, você não precisa se esforçar até a exaustão a cada treino, especialmente
+                    se estiver começando. Ou seja, é essencial entender os próprios limites e respeitar os sinais que
+                    seu corpo dá. <br>
+                    A melhor maneira de progredir é controlando sempre o cansaço, fazendo apenas entre uma e três
+                    repetições de cada exercício e limitando o trabalho de cada grupo muscular a cerca de dez séries
+                    semanais.
+                </span>
+            </div>
         </div>
     </div>
 
