--- a/cadastro.html
+++ b/cadastro.html
@@ -7,6 +7,7 @@
     <title>Cadastro</title>
     <link rel="website icon" href="imagens/logoSimbolo.png">
     <link rel="stylesheet" href="cadastro.css">
+   
 
 <body>
     <!--HEADER-->
@@ -35,14 +36,9 @@
                 </div>
                 <div class="campos">
                     <span>SENHA</span><br>
-                    <input id="senha_input" placeholder="******" type="password">
-                </div>
-                <div class="campos">
-                    <span>CONFIRMAÇÃO DE SENHA</span><br>
-                    <input id="confirmacao_senha_input" placeholder=****** type="password">
+                    <input id="senha_input" placeholder="******" type="password" minlength="6">
                 </div>
                 <br>
-
                 <button onclick="cadastrar()">
                     CADASTRAR
                 </button>
