--- a/public/html/login.html
+++ b/public/html/login.html
@@ -5,21 +5,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="website icon" href="imagens/logoSimbolo.png">
-    <link rel="stylesheet" href="login.css">
+    <link rel="website icon" href="../imagens/logoSimbolo.png">
+    <link rel="stylesheet" href="../css/login.css">
 
 <body>
     <!--HEADER-->
     <div class="header">
         <a href="GymLife.html">
-            <img src="imagens/logoSemfundo.png">
+            <img src="../imagens/logoSemfundo.png">
         </a>
     </div>
 
 
     <!-- CADASTRO -->
     <div class="cadastro">
-        <img src="imagens/bannerTelaCadastro8.jpg" alt="foto de fundo tela de cadastro">
+        <img src="../imagens/bannerTelaCadastro8.jpg">
         <div class="container">
             <div class="campos">
                 <h2>LOGIN</h2>
@@ -35,7 +35,7 @@
                 </button>
                 <div class="possuiConta">
                     <p>
-                        Não tem uma conta?  <a href="cadastro.html">Cadastre-se</a>
+                        Não tem uma conta?  <a href="./cadastro.html">Cadastre-se</a>
                     </p>
                 </div>
             </div>
