--- a/public/html/GymLife.html
+++ b/public/html/GymLife.html
@@ -5,15 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GYM LIFE</title>
-    <link rel="website icon" type="png" href="imagens/logoSimbolo.png">
-    <link rel="stylesheet" href="GymLife.css">
+    <link rel="website icon" type="png" href="../imagens/logoSimbolo.png">
+    <link rel="stylesheet" href="../css/GymLife.css">
 </head>
 
 <body>
 
     <!--HEADER-->
     <div class="header">
-        <img src="imagens/logoSemfundo.png">
+        <img src="../imagens/logoSemfundo.png">
         <div class="container">
             <ul>
                 <a href="#home">
@@ -24,9 +24,6 @@
                     <li>Bem-Estar</li>
                 </a>
 
-                <!-- <a href="#curiosidades">
-                    <li>Curiosidades</li>
-                </a> -->
 
                 <a href="#dicas">
                     <li>Dicas</li>
@@ -36,12 +33,12 @@
                     <li>Desafios</li>
                 </a>
 
-                <a href="login.html">
+                <a href="../html/login.html">
                     <li>Login</li>
                 </a>
 
                 <span>|</span>
-                <a href="cadastro.html">
+                <a href="../html/cadastro.html">
                     <li>Cadastre-se</li>
                 </a>
             </ul>
@@ -50,7 +47,7 @@
 
     <!-- HOME BANNER -->
     <div class="banner" id="home">
-        <img src="imagens/imagem4.jpg">
+        <img src="../imagens/imagem4.jpg">
         <div class="text">
             <h1>SUPERE A SI MESMO A CADA REPETIÇÃO!</h1>
         </div>
@@ -127,7 +124,7 @@
 
     <!-- DICAS -->
     <div class="dicas" id="dicas">
-        <img src="imagens/bannerDicas.jpg">
+        <img src="../imagens/bannerDicas.jpg">
         <div class="title">
             <h1>DICAS PARA INICIANTES NA ACADEMIA</h1>
         </div>
