--- a/public/html/cadastro.html
+++ b/public/html/cadastro.html
@@ -1,26 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro</title>
-    <link rel="website icon" href="imagens/logoSimbolo.png">
-    <link rel="stylesheet" href="cadastro.css">
+    <link rel="website icon" href="../imagens/logoSimbolo.png">
+    <link rel="stylesheet" href="../css/cadastro.css">
    
 
 <body>
     <!--HEADER-->
     <div class="header">
-        <a href="GymLife.html">
-            <img src="imagens/logoSemfundo.png">
+        <a href="../html/GymLife.html">
+            <img src="../imagens/logoSemfundo.png">
         </a>
     </div>
 
 
     <!-- CADASTRO -->
     <div class="cadastro">
-        <img src="imagens/bannerTelaCadastro8.jpg" alt="foto de fundo tela de cadastro">
+        <img src="../imagens/bannerTelaCadastro8.jpg">
         <div class="container">
             <div class="campos">
                 <h2>CADASTRE-SE</h2>
@@ -44,7 +44,7 @@
                 </button>
                 <div class="possuiLogin">
                     <p>
-                        Já tem uma conta? <a href="login.html"> Faça login aqui</a>
+                        Já tem uma conta? <a href="../html/login.html"> Faça login aqui</a>
                     </p>
                 </div>
 
